// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTitle when props are defined Should match snapshot 1`] = `
.c0 {
  font-size: 24px;
  font-weight: bold;
  color: #3f51b5;
  text-align: center;
}

<h1
  className="c0"
>
  Text
</h1>
`;

exports[`PageTitle when props are undefined Should match snapshot 1`] = `
.c0 {
  font-size: 24px;
  font-weight: bold;
  color: #3f51b5;
  text-align: left;
}

<h1
  className="c0"
/>
`;
